# underwater_color_enhance

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Test-CMakeLists.txt  build.sh  escalibr_color.xml  gmon.out  image_config.yaml  image_correct.output  madeByHand.xml  output_escalibr.xml  package.xml  ros_config.yaml
Camera_Response_Files/: IDS_U3251_Camera_Response.csv  Nikon_D90_Camera_Response.csv  Sony_IMX117_Camera_Response.csv  Sony_IMX277CQT-C_Camera_Response.csv  Sony_IMX322LQJ-C_Camera_Response.csv
Jerlov_Water/: Jerlov_Water_Types.csv
Options/Image/: image_correct  image_correct.cc
config/: image_config.yaml  ros_config.yaml
include/: ColorCorrect.h  Method.h  NewModel.h  Scene.h
include/underwater_color_enhance/: ColorCorrect.h  ImageHandler.h  Method.h  NewModel.h  Scene.h
launch/: image_color_enhance.launch  ros_color_enhance.launch
src/: ColorCorrect.cc  ColorCorrect.cpp  ImageHandler.cpp  NewModel.cc  NewModel.cpp  Scene.cpp
src/Options/: image_correct.cpp  ros_correct.cpp
